--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- FILEPATH: /c:/xampp/htdocs/pseudo/index.html -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Pseudo testing Webpage</h1>
+    <h1>Pseudo Testing Webpage</h1>
   </header>
 
   <main>
