--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Testar Pseudo element</title>
+<title>Testar Pseudo element</title>
   <link rel="stylesheet" href="pseudo.css">
 
 </head>
 <body>
   <header>
-    <h1>Pseudo Testing Webpage</h1>
+    <h1>fff</h1>
   </header>
 
   <main>
