Klar med lektion

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
   <header>
-    <h1>fff</h1>
+    <h1>Pseudo Testing Webpage</h1>
   </header>
 
-  <main>
+  <div>
+    <p class="pengar">450</p>
+    <h2>Titel</h2>
+    <img src="">
     <p>This is the main content of the webpage.</p>
-  </main>
+  </div>
 
   <footer>
     <p>&copy; 2022 Your Website. All rights reserved.</p>
